<resources>
    <string name="app_name">Tumascotik</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_tumascotik">Tumascotik</string>
    <string name="menu_pedircita"> Pedir Cita </string>
    <string name="main_nombre">Nombre:</string>
    <string name="main_telf">Teléfono:</string>
    <string name="main_mascota">Mascota:</string>
    <string name="button_siguiente">Siguiente</string>
    <string name="final_enviar">Enviar..</string>
    <string name="general_choose">--Choose--</string>
    <string-array name="horas_array"></string-array>
    <string name="verCitas">¿Qué citas deseas ver?</string>
    <string name="log_in_username_hint">username</string>
    <string name="log_in_passw_hint">password</string>
    <string name="log_in">Log In</string>
    <string-array name="Citas">
        <item>Accepted</item>
        <item>Pending</item>
    </string-array>
    <string-array name="Razas">
        <item>--Elija--</item>
        <item>Perro</item>
        <item>Gato</item>
        <item>Otro</item>
    </string-array>
    <string-array name="Presupuestos">
        <item>Vacuna</item>
        <item>Peluqueria</item>
        <item>Papeles</item>
        <item>Consulta</item>
    </string-array>
    <string-array name="Perros">
        <item>--Elija--</item>
        <item>Pastor Alemán</item>
        <item>Boxer</item>
        <item>Yorkshire</item>
        <item>Dálmata</item>
        <item>Mixto</item>
    </string-array>
    <string-array name="Gatos">
        <item>--Elija--</item>
        <item>Tortuga Carey</item>
        <item>Siames</item>
        <item>Persa</item>
        <item>Mixto</item>
    </string-array>
    <string-array name="Otros">
        <item>--Elija--</item>
        <item>Pájaro</item>
        <item>Roedor</item>
        <item>Anfibio</item>
    </string-array>
    <string-array name="Temperamento">
        <item>--Elija--</item>
        <item>Tranquilo</item>
        <item>Nervioso</item>
        <item>Agresivo</item>
    </string-array>
    <string-array name="Trans">
        <item>--Elija--</item>
    </string-array>
    <string-array name="Presupuesto">
        <item>Presupuesto</item>
    </string-array>
    <string name="pet_picker_title">Pick a pet...</string>
    <string name="menu_my_profile">My Profile</string>
    <string name="menu_my_pets">My Pets</string>
    <string name="menu_view_pets">View Pets</string>
    <string name="menu_my_clients">My Clients</string>
    <string name="menu_make_appointment">Make Appointment</string>
    <string name="menu_view_appointment">My Appointments</string>
    <string name="menu_my_orders">View Orders</string>
    <string name="menu_budget">Budgets</string>
    <string name="main_load_backend_data_dialog">Loading data from Tumascotik. This process can take several minutes</string>
    <string name="pet_info_button_edit">Edit</string>
    <string name="pet_info_button_save">Save</string>
    <string name="pet_info_title_specie">Specie</string>
    <string name="pet_info_title_breed">Breed</string>
    <string name="pet_info_title_gender">Gender</string>
    <string name="pet_info_title_agressive">Agressive</string>
    <string name="pet_info_title_agressive_yes">Yes</string>
    <string name="pet_info_title_agressive_no">No</string>
    <string name="pet_info_title_properties">Properties</string>
    <string name="pet_info_title_puppy">Age</string>
    <string name="pet_info_title_comment">Comments</string>
    <string name="pet_info_loading_lists">Loading lists ...</string>
    <string name="pet_info_loading_breed_lists">Loading Breeds ...</string>
    <string name="pet_info_loading_specie_lists">Loading Species ...</string>
    <string name="pet_info_saving_pet">Saving Pet ...</string>
    <string name="pet_info_deleting_pet">Deleting Pet ...</string>
    <string name="pet_info_afirmative_option">Delete Pet ...</string>
    <string name="pet_info_dialog_alert_delete_pet">¿Are you shure you want to delete this pet?</string>
    <string name="pet_info_pet_not_updated">It is not possible to update the your pet at the moment</string>
    <string name="pet_info_pet_not_inserted">It is not possible to insert your pet at the moment</string>
    <string name="pet_info_pet_data_incomplete">There is some important information missing on your pet profile...</string>
    <string name="pet_info_data_missing_name">Please insert a name for your pet</string>
    <string name="pet_info_data_missing_agresive">You should tell us if your pet is aggresive</string>
    <string name="user_info_button_edit">Edit</string>
    <string name="user_info_button_save">Save</string>
    <string name="user_info_button_saving">Saving user</string>
    <string name="user_info_title_name">Name</string>
    <string name="user_info_title_username">Userame</string>
    <string name="user_info_title_password">Password</string>
    <string name="user_info_title_confirm_password">Confirm Password</string>
    <string name="user_info_title_lastname">Lastname</string>
    <string name="user_info_title_email">Email</string>
    <string name="user_info_title_address">Address</string>
    <string name="user_info_title_gender">Gender</string>
    <string name="user_info_title_phone_home">Phone Number</string>
    <string name="user_info_title_phone_mobile">Cellphone</string>
    <string name="user_info_user_not_updated">It is not possible to update your information at the moment</string>
    <string name="user_info_user_not_inserted">It is not possible to this user at the moment</string>
    <string name="user_info_data_missing_name">Please insert a name t</string>
    <string name="user_info_data_missing_lastname">Please insert a lastname</string>
    <string name="user_info_data_missing_username">Please insert a username</string>
    <string name="user_info_data_missing_password">Please insert a password</string>
    <string name="user_info_data_no_match_password">Passwords dont match</string>
    <string name="user_info_data_missing_address">Please insert a address</string>
    <string name="user_info_data_missing_cellphone">Please insert a valid cellphone</string>
    <string name="set_date_time_title">Time: </string>
    <string name="set_date_date_title">Date: </string>
    <string name="set_date_date_text">Date</string>
    <string name="set_date_time_text">Time</string>
    <string name="set_date_time_datefirst_text">Pick Date First</string>
    <string name="set_date_pick_time_block">Pick a Time BLock :</string>
    <string name="set_date_pick_motive">Please choose the reason of the appointment :</string>
    <string name="set_date_pick_checkfields_message1">Sorry, but the field </string>
    <string name="set_date_pick_checkfields_message3"> is incomplete.</string>
    <string name="set_date_pick_checkfields_message4">Sorry, but the fields </string>
    <string name="set_date_pick_checkfields_message5"> are incomplete.</string>
    <string name="set_date_price_alert">The chosen time block price can be higher due to the time </string>
    <string name="set_date_dialog_loading_timeblocks">Loading... </string>
    <string name="set_request_details_comments_title">Comments: </string>
    <string name="set_request_details_motive_title">Motive: </string>
    <string name="set_request_details_motive">Motive</string>
    <string name="set_request_details_isDeivery_title_afirmative">Delivery: YES </string>
    <string name="set_request_details_isDeivery_title_negative">Delivery: NO </string>
    <string name="set_request_details_loading_motive_lists">Loading Services ...</string>
    <string name="send_request_sending">Sending...</string>
    <string name="send_request_details_title">Coco</string>
    <string name="send_request_details_text_motive">Appointment for :  </string>
    <string name="send_request_details_text_date">Date :  </string>
    <string name="send_request_details_text_time">Time :</string>
    <string name="send_request_details_text_price"> Price: Bs. </string>
    <string name="send_request_details_text_duration"> Duration : </string>
    <string name="send_request_details_text_delivery_yes"> Delivery :Yes</string>
    <string name="send_request_details_text_delvery_no"> Delivery : No</string>
    <string name="send_request_details_hour_sufix"> hours</string>
    <string name="send_request_details_motive_missing">Please select a motive</string>
    <string name="request_view_title">Appointment for : </string>
    <string name="request_view_day">Day: </string>
    <string name="request_view_time">Time: </string>
    <string name="request_view_yes">Yes</string>
    <string name="request_view_no">No</string>
    <string name="request_view_passed_date1">"Was the appointment for "</string>
    <string name="request_view_passed_date2">" of "</string>
    <string name="request_view_passed_date3">" held?"</string>
    <string name="request_view_dialog_conector">for</string>
    <string name="request_view_dialog_cancel_button">Cancel Appointment</string>
    <string name="request_view_dialog_accept_button">Accept Appointment</string>
    <string name="request_view_process_cancelling">Cancelling Appointment...</string>
    <string name="request_view_process_accepting">Accepting Appointment...</string>
    <string name="request_view_zero_data">You havent made any \n appointments yet...</string>
    <string name="request_notification_toast_accepted">Appointment accepted for : </string>
    <string name="request_notification_accepted_title">The appointment was accepted for : </string>
    <string name="request_notification_accepted_content">The appointment has been added into your Calendar </string>
    <string name="request_notification_toast_rejected">Your vet can not attend </string>
    <string name="request_notification_rejected_title">Appointment rejected for : </string>
    <string name="request_notification_rejected_content">We are sorry, please choose another date/time </string>
    <string name="request_notification_rejected_content_vet">The client has cancelled the appointment </string>
    <string name="budget_total_title">Total</string>
    <string name="budget_zero_data">You havent \n added anything yet...</string>
    <string name="budget_updating_prices">Updating prices...</string>
    <string name="budget_downloading_prices">Downloading prices...</string>
    <string name="budget_updating_budgets">Updating Budget Status...</string>
    <string name="budget_dialog_ok">OK</string>
    <string name="budget_dialog_cancel">Cancel</string>
    <string name="budget_dialog_delete_from_list">Delete from list</string>
    <string name="budget_dialog_send">Send</string>
    <string name="budget_dialog_send_title">Dear client</string>
    <string name="budget_dialog_send_body">Do you want to send the order for a total of Bs. </string>
    <string name="budget_sending_order">Sending order...</string>
    <string name="budget_send_order">Send Order</string>
    <string name="budget_dialog_title">Requested Products</string>
    <string name="budget_date_title">Emission Date : </string>
    <string name="budget_actionbar_title">My Orders</string>
    <string name="budget_dialog_order_ready">Order Ready</string>
    <string name="budget_dialog_cancel_order">Cancel Order</string>
     <string name="budget_dialog_call">Call</string>
    <string name="budget_dialog_order_delivered">Order Delivered</string>
    <string name="budget_request_dialog__back">Go Back</string>
    <string name="about_view_developed_by">Developed by Arawanaey</string>
    <string name="about_view_contact">Contact us vía e-mail: manaurestoop@gmail.com</string>
    <string name="about_view_about_menu_title">About</string>
    <string-array name="Genders">
        <item>--Choose--</item>
        <item>Male</item>
        <item>Female</item>
    </string-array>
</resources>