<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main_buttons_menu"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/pdrcitamenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/buton_yellow"
        android:clickable="true"
        android:gravity="center"
        android:paddingRight="@dimen/menu_buttons_padding"
        android:paddingLeft="@dimen/menu_buttons_padding"
        android:text="@string/menu_make_appointment"
        android:textColor="@color/text_white"
        android:textSize="@dimen/big_oval_buttons" />

    <TextView
        android:id="@+id/bvercitasmenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/menu_buttons_margin"
        android:layout_marginTop="@dimen/menu_buttons_margin"
        android:background="@drawable/buton_magenta"
        android:clickable="true"
        android:gravity="center"
         android:paddingRight="@dimen/menu_buttons_padding"
        android:paddingLeft="@dimen/menu_buttons_padding"
        android:text="@string/menu_view_appointment"
        android:textColor="@color/text_white"
        android:textSize="@dimen/big_oval_buttons" />

    <TextView
        android:id="@+id/bpedirpresmenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/buton_cyan"
        android:clickable="true"
        android:gravity="center"
        android:text="@string/menu_budget"
         android:paddingRight="@dimen/menu_buttons_padding"
        android:paddingLeft="@dimen/menu_buttons_padding"
        android:textColor="@color/text_white"
        android:textSize="@dimen/big_oval_buttons" />

</LinearLayout>