<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo"
    android:paddingTop="100dp"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textView_motive_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:layout_weight="1"
            android:text="@string/set_request_details_motive_title"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/hinttext" />

        <Spinner
            android:id="@+id/spinner_setrequestdetails_requestmotive"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingRight="20dp"
            android:paddingTop="15dp"
            android:scrollbars="horizontal"
            android:splitMotionEvents="false"
            android:textAlignment="center" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textView_setrequestdetails_comment_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/set_request_details_comments_title"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/editText_setrequestdetails_comments"
            android:layout_width="0dp"
            android:layout_height="150dp"
            android:layout_weight="1"
            android:textColor="@color/hinttext"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/set_request_details_isDeivery_title"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <ToggleButton
            android:layout_marginLeft="50dp"
            android:id="@+id/toggleButton_setrequestdetails_isdelivetry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
           />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
         >

        <Button
            android:id="@+id/bcancpedirc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Cancelar" />

        <Button
            android:id="@+id/bsigpedirc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_siguiente" />
    </LinearLayout>

    </LinearLayout>
